--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 				</div>
 			</div>
 		<div class="centermenu">	
-			<a id="treatmentbutton" href="page3.html">診療項目及門診 TREATMENTS</a>
+			<a id="treatmentbutton" href="templates/page3.html">診療項目及門診 TREATMENTS</a>
 				<div class="dropdown-content">
-					<a href="page3.html">診療項目 TREATMENTS</a>
-					<a href="page4.html"> 醫療小知識 Mirco Blog</a>
+					<a href="templates/page3.html">診療項目 TREATMENTS</a>
+					<a href="templates/page4.html"> 醫療小知識 Mirco Blog</a>
 				</div>
 		</div>
 
@@ -61,10 +61,10 @@
 	</h1>
 </div>
 
-
+<p class="contentChi">歡迎來到草鞋墩神經外科</p>
+	<br>
 
 <div class="imagewrapper">
-	<p class="contentChi">歡迎來到草鞋墩</p>
 	
 	<img class="imgvp1" src="images/IMG_3575.JPG">
 </div>
